infrastructure/argo-cd/ingress-service-argo-cd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd
  namespace: argo-cd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argo-cd.dmitryz.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argo-cd.dmitryz.ru
    secretName: argo-tls
